# epub_qdrant

./: .env.example  .gitignore  .gitmodules  EVOLUTION.md  README.md  a-b-test.sh  corpus.md  ingest.sh  prompts.txt  pyproject.toml  sys_prompt.txt
.clinerules/: PHASE2_PLAN.md  SAE_SPLADE_IMPLEMENTATION.md  agent_rules.md  caveman.md  first-self-improve-r2.md  ingestion.md  lean-ctx.md  paper_embedding.md  project.md  retrieval.md  single-book-sweep.md  splade_spec.md
bedrock_compare/: .gitignore  0_retrieve_using_prompts.sh  1_generate_responses_from_results.sh  README.md  bedrock_client.py  chatgpt_response_gen_plan.md  harvest_responses.py  invoke_llm_trials.py  judge_responses_for_runs.py  logging_utils.py  prompt_inspo.md  prompts.json  query_all.py  test_system_prompt.txt
bedrock_compare/query_responses/: 10_spatial_orientation_5_16.json  10_spatial_orientation_5_2.json  10_spatial_orientation_5_32.json  10_spatial_orientation_5_4.json  10_spatial_orientation_5_8.json  11_structural_aggregation_1_16.json  11_structural_aggregation_1_2.json  11_structural_aggregation_1_32.json  11_structural_aggregation_1_4.json  11_structural_aggregation_1_8.json  12_structural_aggregation_1_16.json  12_structural_aggregation_1_2.json  12_structural_aggregation_1_32.json  12_structural_aggregation_1_4.json  12_structural_aggregation_1_8.json  13_structural_aggregation_2_16.json  13_structural_aggregation_2_2.json  13_structural_aggregation_2_32.json  13_structural_aggregation_2_4.json  13_structural_aggregation_2_8.json  14_structural_aggregation_2_16.json  14_structural_aggregation_2_2.json  14_structural_aggregation_2_32.json  14_structural_aggregation_2_4.json  14_structural_aggregation_2_8.json  15_structural_aggregation_3_16.json  15_structural_aggregation_3_2.json  15_structural_aggregation_3_32.json  15_structural_aggregation_3_4.json  (+158 more)
ctx_len_study/: compile.sh  generate_study.py  named-vector-query-strategy.md  run_study.sh  server-testing.md
docs/: architecture_mapping.md  bug2-prompt-template-contamination-investigation.md  finally-sae.md  fused_v3_result_human_readable.txt  hybrid-vs-dense-evaluation-plan.md  options_weighed.md  pipeline-overview.md  semantic_chunking.md
examples/: 2603_07444_content_list_v2.json
legacy_prompts/: post-phase-2_sweep_sparse_weight.md  self-improve.md
mcp_servers/retrieval/: INTENT.md  README.md  pyproject.toml
mcp_servers/retrieval/mcp_server/: config.py  llm_client.py  retriever.py  server.py
results/: 0-z-averaging.json  2a-dense-vs-hybrid.json  ab_sparse_0.0.json  baseline_vs_fused_test.json  baseline_vs_fused_test2.json  fused_v3.json  semantic-eval-v2.json  semantic-eval-v3.json  semantic-eval.json  sweep_books_semantic.json  sweep_masteringretrieval_augmentedgeneration.json  sweep_results.json
sae_intent/: REVISION.md  design.md  requirements.md  tasks.md
scripts/: baseline_vs_fused.py  blind_ab_test.py  compare_collections.py  compare_papers_v4.py  context_window_sweep.py  diagnose_papers_sae.py  diagnose_sparse.py  dump_catalog.py  embed_papers.py  embed_papers_to_qdrant.py  embed_sparse_vectors.py  eval_study.py  evaluate.py  extract_dec_norms.py  generate_book_metadata.py  ingest_fresh.py  ingest_mineru_json.py  ingest_sae.py  inspect_books.py  make_response_assessment_csv.py  mineru_pipeline.py  patch_papers_semantic.py  profile_server_vram.py  profile_vram.py  regen_report.py  run_mineru_multi_gpu.py  sweep_single_book.py  sweep_sparse_weight.py  test_hybrid_search.py  test_ingest_one_book.py  test_ingest_one_paper.py  test_sae_query.py
servers/embedding_server/: README.md  client.py  embedder.py  pyproject.toml  rewrite_prompt.txt  server.py
src/: __init__.py  chunker.py  config.py  embedder.py  epub_parser.py  main.py  storage.py
src/cli/: main.py
tests/: README.md  test_blind_ab_helpers.py  test_blind_ab_properties.py  test_blind_ab_properties_2.py  test_citation_masker.py  test_cli.py  test_cli_v3.py  test_dense_weight.py  test_e2e_v3.py  test_epub_headings.py  test_ingestion_retrieval.py  test_integration_chunking.py  test_judge_streaming.py  test_llm_functions_v3.py  test_loaders.py  test_md_section_splitter.py  test_mineru_converter.py  test_mineru_json_parser.py  test_mineru_pipeline.py  test_paper_section_splitter.py  test_pdf_loader_backend.py  test_pure_functions_v3.py  test_real_e2e.py  test_run_mineru_multi_gpu.py  test_sae_phase1.py  test_semantic_chunker.py  test_signal_isolation_integration.py  test_v3_properties.py
(+512 files in other folders)
