[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "epub-qdrant"
version = "0.1.0"
description = "EPUB-to-Qdrant ingestion pipeline"
requires-python = ">=3.11"
dependencies = [
    "epub>=0.5.2",
    "qdrant-client>=1.12.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
]

[project.scripts]
epub_qdrant = "src.main:cli"