[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "epub-qdrant"
version = "0.1.0"
description = "EPUB-to-Qdrant ingestion pipeline"
requires-python = ">=3.11"
dependencies = [
    "epub>=0.5.2",
    "qdrant-client>=1.12.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "arxiv>=3.0.0",
    "feedparser>=6.0.10",
    "pypdf>=5.0.0",
    "semchunk>=4.0.0",
    "tokenizers>=0.15.0",
    "numpy>=1.24.0",
]

[project.scripts]
epub_qdrant = "src.cli.main:cli"
epubq = "src.cli.main:cli"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
