[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "epub-qdrant"
version = "0.1.0"
description = "EPUB-to-Qdrant ingestion pipeline"
requires-python = ">=3.11"
dependencies = [
    "epub>=0.5.2",
    "qdrant-client>=1.12.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "arxiv>=3.0.0",
    "feedparser>=6.0.10",
    "pypdf>=5.0.0",
    "semchunk>=4.0.0",
    "tokenizers>=0.15.0",
    "numpy>=1.24.0",
    "beautifulsoup4>=4.12.0",
    "colorama>=0.4.6",
    "matplotlib>=3.8",
    "openai>=1.40",
    "scipy>=1.17.1",
    "torch>=2.3.0",
    "torchvision",
    "torchaudio",
    "sentence-transformers",
    "accelerate",
    "sae-lens==6.43.0",
]

[project.scripts]
epub_qdrant = "src.cli.main:cli"
epubq = "src.cli.main:cli"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]
mineru = [
    "pysbd>=0.3.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.envs.default]
# This tells hatch to pass the extra index to the installer
pip-compile-args = ["--extra-index-url", "https://download.pytorch.org/whl/cu128"]
# Or if using the uv-native hatch plugin:
installer = "uv"

[tool.hatch.envs.default.overrides]
# This ensures that even if a version exists on PyPI, it prioritizes the CUDA build
dependencies = [
  "torch>=2.3.0",
]