[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[project]
name = "epub-qdrant-retrieval-mcp"
version = "0.1.0"
description = "MCP retrieval server for EPUB knowledge base"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "httpx-sse>=0.4.0",
    "litellm>=1.50.0",
    "numpy>=1.26.0",
]

[project.urls]
"Homepage" = "https://github.com/justinherter/epub_qdrant"

[project.scripts]
epub-retrieval-mcp = "mcp_server.server:main"

# Development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]